web/css/components/chat.css
/* ... */
.header-current > i {
  font-size: 20px;
  line-height: 38px;
  cursor: pointer;
  color: #67686b;
}

.header-waiting > i {
  font-size: 20px;
  line-height: 38px;
  cursor: pointer;
  color: #67686b;
}

.list-current,
.list-waiting {
  margin: 0;
  padding: 0;
}

.list-record-item {
  position: relative;
  width: 100%;
  height: 55px;
  cursor: pointer;
  border-bottom: 1px solid #f1f0f0;
}

.list-record-item:hover {
  background: #eff1f4;
}

.list-record-item.active {
  background: #f3f5f9;
  box-shadow: -9px 0px 20px -12px rgba(179, 179, 179, .75) inset;
}

.list-record-item:last-child {
  border-bottom: none;
}

.list-record-item .status-full {
  position: absolute;
  top: 10px;
  left: 10px;
  width: 10px;
  height: 30px;
}

.list-record-item .status-half-first {
  position: absolute;
  top: 10px;
  left: 10px;
  width: 10px;
  height: 15px;
}

.list-record-item .status-half-last {
  position: absolute;
  top: 27px;
  left: 10px;
  width: 10px;
  height: 15px;
}

.answered {
  color: #31bf7a;
  background: #31bf7a;
}

.text-answered {
  color: #31bf7a;
}

.unanswered {
  color: #f8ca12;
  background: #f8ca12;
}

.urgent {
  color: #e75c3c;
  background: #e74c3c !important;
}

.text-urgent {
  color: #e74c3c !important;
}

.text-unanswered {
  color: #f8ca12;
}

.sell-opportunity {
  background: #6075a4;
}

.multiple {
  display: inline-block;
  margin: 15px;
  overflow: hidden;
  border-radius: 3px;
  background: #f9fafb;
}

.multiple.selected {
  box-shadow: 0 0 20px 0 rgba(74, 83, 100, .4);
}

.half-width {
  max-width: -o-calc(50% - 30px);
  max-width:    calc(50% - 30px);
  height:    calc(100% - 30px);
  height: -o-calc(100% - 30px);
}

.half-height {
  max-height: -o-calc(50% - 30px);
  max-height:    calc(50% - 30px);
}

.full-width {
  max-width: -o-calc(100% - 30px);
  max-width:    calc(100% - 30px);
}

.modal-content {
  border-radius: 3px;
}

.modal-footer {
  margin-top: 0 !important;
  padding: 15px;
  border-top: none;
}

.modal-title {
  font-size: 14px;
}

.modal-transfer,
.modal-close,
.modal-ban,
.modal-unavailable,
.modal-prompt {
  position: fixed;
  top: calc(50% - 100px) !important;
  left: calc(50% - 250px) !important;
  width: 500px;
}

.modal-connection-lost {
  position: absolute;
  top: calc(50% - 50px) !important;
  left: calc(50% - 250px) !important;
  width: 500px;
  color: #b94a48;
  background: #eed3d7;
}

.modal-transfer .list-group-item {
  cursor: pointer;
}

.modal-backdrop.in {
  cursor: pointer;
}

.modal-close-button {
  position: absolute;
  z-index: 10002;
  top: 10px;
  right: 10px;
  font-size: 20px;
  opacity: 1;
  color: #ffffff;
  border: none;
  background: transparent;

  -webkit-appearance: none;
}

.list-record-item .informations {
  display: inline-block;
  width: 150px;
  height: 35px;
  margin-top: 10px;
  margin-left: 30px;
  border-right: 1px solid #efefef;
}

.list-record-item .informations p {
  width: 100%;
  margin: 0;
  font-size: 12px;
  overflow: hidden;
  white-space: nowrap;
     text-overflow: ellipsis;
  color: #787878;

  -o-text-overflow: ellipsis; /* pour Opera 9 */
}

.list-record-item .informations label {
  position: relative;
  top: -4px;
  margin: 0 0 0 -2px;
  font-size: 10px;
  color: #787878;
}

.list-record-item .informations icon {
  margin-right: 3px;
  font-size: 12px;
}

.list-record-item .timer-lastmsg {
  display: inline-block;
  width: 90px;
  font-size: 14px;
  text-align: center;
  vertical-align: 35%;
  color: #999999;
}

.aside-chat-left {
  background: #f9fafc;
}

.conversation-header p {
  width: 100%;
  max-width: -o-calc(100% - 310px);
  max-width:    calc(100% - 310px);
  margin-left: 5px;
}

.conversation-header-control {
  margin-top: 10px;
  font-size: 12px;
  font-weight: 600;
  color: #6e7d83;
}

.conversation-minus {
  float: right;
  margin: 18px 0 0 15px;
  font-size: 18px;
  cursor: pointer;
  color: #6e7d83;
}

.conversation-close:hover,
.ban:hover,
.transfer:hover {
  color: #576064;
}

.conversation-header-control .transfer,
.conversation-header-control .ban,
.conversation-header-control .conversation-close {
  display: inline-block;
  padding: 5px 8px 5px 0px;
  cursor: pointer;
  border: solid 1px rgba(206, 206, 206, 1);
  border-radius: 3px;
}

.conversation-footer {
  padding: 0 15px 10px 15px;
}

.conversation-footer .panel {
  margin: 0;
  border: solid 1px rgba(136, 136, 136, .32);
  border-radius: 3px;
  box-shadow: none;
}

.conversation-footer .alert-writing {
  position: absolute;
  top: -25px;
  right: 25px;
  font-size: 12px;
  font-weight: 600;
  color: #747474;
}

.conversation-footer textarea {
  width: 100%;
  height: 85px;
  resize: none;
}

.conversation-section {
  margin-bottom: 110px;
  padding: 15px;
}

.conversation-section-list {
  padding: 0;
}

.conversation-section-list li {
  display: block;
}

.conversation-section-item {
  position: relative;
  margin-bottom: 20px;
}

.conversation-section-item.item-visitor {
  text-align: left;
}
.conversation-section-item.item-operator {
  text-align: right;
}

/* Messages of a different type following each other have a
   larger margin in between */
.item-operator + .item-visitor,
.item-visitor + .item-operator {
  margin-bottom: 20px;
}
.item-visitor + .item-visitor,
.item-operator + .item-operator {
  margin-top: -15px;
}

.conversation-section-item img.img-circle {
  float: right;
  width: 35px;
  height: 35px;
  margin-right: 5px;
}

.conversation-section-item div.msg-visitor {
  display: inline-block;
  max-width: 85%;
  min-height: 35px;
  padding: 7px 8px;
  padding-left: 15px;
  font-size: 12px;
  font-weight: 300;
  text-align: left;
  word-wrap: break-word;
  color: #515151;
  border-radius: 5px;
  background-color: rgba(206, 206, 206, .4);
}
/* ... */

